feat: add global error handler
